--- a/src/components/ThemeProvider.astro
+++ b/src/components/ThemeProvider.astro
@@ -1,10 +1,10 @@
 <script is:inline>
-	const lightModePref = window.matchMedia('(prefers-color-scheme: light)')
+	const darkModePref = window.matchMedia('(prefers-color-scheme: dark)')
 
 	// Get user preference from local storage or from browser preference
 	function getUserPref() {
 		const storedTheme = localStorage.getItem('theme') ?? undefined
-		return storedTheme || (lightModePref.matches ? 'light' : 'dark')
+		return storedTheme || 'dark'
 	}
 
 	function setTheme(newTheme) {
@@ -38,5 +38,5 @@
 	})
 
 	// Listen for prefers-color-scheme change
-	lightModePref.addEventListener('change', (e) => setTheme(e.matches ? 'light' : 'dark'))
+	lightModePref.addEventListener('change', (e) => setTheme(e.matches ? 'dark' : 'light'))
 </script>
