--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ const PROJECTS = [
 				<LinkedInIcon class='size-5' />
 				LinkedIn
 			</SocialPill>
-			<SocialPill href='/cv.pdf' download='Tobias-Sanmartin-Curriculum.pdf'>
+			<SocialPill href='cv.pdf' download='Tobias-Sanmartin-Curriculum.pdf'>
 				<CurriculumIcon class='size-6' />
 				Curriculum
 			</SocialPill>
