--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -27,7 +27,7 @@
 
 					<a
 						class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
-						href='https://www.linkedin.com/in/example/'
+						href='https://www.linkedin.com/in/tob%C3%ADas-sanmart%C3%ADn-001b74254/'
 					>
 						<svg
 							width='2em'
@@ -42,7 +42,7 @@
 					</a>
 					<a
 						class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
-						href='https://www.linkedin.com/in/example/'
+						href='https://github.com/tobiassanmartindev'
 					>
 						<svg
 							viewBox='0 0 256 250'
