--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -11,17 +11,17 @@
 
 		<div class='flex flex-row items-center justify-center gap-x-5 sm:gap-x-7'>
 			<a
-				href='/blog'
+				href='#about'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
 				aria-label='Nav Menu Item'
 				>Sobre mi
 			</a>
-			<a
+			<!-- <a
 				href='/tools'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
 				aria-label='Nav Menu Item'
 				>Herramientas
-			</a>
+			</a> -->
 
 			<button
 				id='toggleDarkMode'
