correccion de imagenes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ const PROJECTS = [
 		description:
 			'Administración de gimnasios, permitiendo gestionar miembros, membresías, rutinas y pagos de manera eficiente.  ',
 		link: 'https://fithub-software-v1.vercel.app/#/',
-		image: '../../src/proyects/fithub.png',
+		image: 'src/assets/fithub.png',
 		tags: [TAGS.VUE, TAGS.JAVASCRIPT, TAGS.SUPABASE]
 	},
 	{
@@ -101,7 +101,7 @@ const PROJECTS = [
 		description:
 			'Uni renta es una pagina dedicada a aquellos estudiantes que estan buscando alquiler para sus estudios.',
 		link: 'https://uni-rentav1.vercel.app/#/',
-		image: '../../src/proyects/unirenta.png',
+		image: 'src/assets/unirenta.png',
 		tags: [TAGS.VUE, TAGS.TAILWIND]
 	}
 ]
