--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,4 +1,5 @@
 ---
+// import perfil from ''
 const personalImageAlt = 'Tobias Sanmartin'
 ---
 
@@ -29,10 +30,9 @@ const personalImageAlt = 'Tobias Sanmartin'
 	</div>
 
 	<img
+		src='src/assets/me2.png'
 		width='200'
 		height='200'
-		src='../../public/me2.png'
-		alt={personalImageAlt}
 		class='aspect-square dark:bg-none-500/5 order-1 h-full w-64 rounded-2xl object-cover p-1 md:order-2 lg:w-64 lg:p-2'
 		style='object-position: 50% 50%; margin-top:-80px'
 	/>
