--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,5 +1,4 @@
 ---
-// import perfil from ''
 const personalImageAlt = 'Tobias Sanmartin'
 ---
 
@@ -30,7 +29,7 @@ const personalImageAlt = 'Tobias Sanmartin'
 	</div>
 
 	<img
-		src='src/assets/me2.png'
+		src='/images/me2.png'
 		width='200'
 		height='200'
 		class='aspect-square dark:bg-none-500/5 order-1 h-full w-64 rounded-2xl object-cover p-1 md:order-2 lg:w-64 lg:p-2'
