--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,17 +12,9 @@ import CurriculumIcon from '@/components/icons/Curriculum.astro'
 import MailIcon from '@/components/icons/Mail.astro'
 import SocialPill from '@/components/SocialPill.astro'
 import ExperienceItem from '@/components/ExperienceItem.astro'
-import NextJS from '@/components/icons/NextJS.astro'
-import VueJS from '@/components/icons/VueJS.astro'
-import Tailwind from '@/components/icons/Tailwind.astro'
-import HTML from '@/components/icons/Html.astro'
-import CSS from '@/components/icons/Css.astro'
-import JAVASCRIPT from '@/components/icons/Javascript.astro'
-import SUPABASE from '@/components/icons/Supabase.astro'
-import Link from '@/components/icons/Link.astro'
-import LinkButton from '@/components/LinkButton.astro'
 import TecnologyStack from '@/components/TecnologyStack.astro'
 import AboutMe from '@/components/AboutMe.astro'
+import Proyects from '@/components/Proyects.astro'
 
 import { Image } from 'astro:assets'
 import perfil from '../assets/toto.webp'
@@ -52,57 +44,6 @@ const EXPERIENCIE = [
 		company: 'Freelance',
 		description:
 			'En esta etapa estuve trabajando de manera freelance, creando e implementando paginas web completas para clientes locales. La variedad de paginas iban desde landing pages hasta sistemas de gestion pequeña. Mejorando en algunos casos hasta 30% de gestion comercial, y hasta un 80% de alcanze.'
-	}
-]
-
-const TAGS = {
-	VUE: {
-		name: 'Vue JS',
-		class: 'bg-black text-white',
-		icon: VueJS
-	},
-	HTML: {
-		name: 'HTML',
-		class: 'bg-black text-white',
-		icon: HTML
-	},
-	JAVASCRIPT: {
-		name: 'Javascript',
-		class: 'bg-black text-white',
-		icon: JAVASCRIPT
-	},
-	CSS: {
-		name: 'Css',
-		class: 'bg-black text-white',
-		icon: CSS
-	},
-	SUPABASE: {
-		name: 'Supabase',
-		class: 'bg-black text-white',
-		icon: SUPABASE
-	},
-	TAILWIND: {
-		name: 'Tailwind CSS',
-		class: 'bg-[#003159] text-white',
-		icon: Tailwind
-	}
-}
-const PROJECTS = [
-	{
-		title: 'Fithub - Sistema de gestion para gimnasios',
-		description:
-			'Administración de gimnasios, permitiendo gestionar miembros, membresías, rutinas y pagos de manera eficiente.  ',
-		link: 'https://fithub-software-v1.vercel.app/#/',
-		image: 'src/assets/fithub.png',
-		tags: [TAGS.VUE, TAGS.JAVASCRIPT, TAGS.SUPABASE]
-	},
-	{
-		title: 'Uni Renta - Alquileres para estudiantes',
-		description:
-			'Uni renta es una pagina dedicada a aquellos estudiantes que estan buscando alquiler para sus estudios.',
-		link: 'https://uni-rentav1.vercel.app/#/',
-		image: 'src/assets/unirenta.png',
-		tags: [TAGS.VUE, TAGS.TAILWIND]
 	}
 ]
 ---
@@ -176,37 +117,7 @@ const PROJECTS = [
 
 	<div class='mb-10 mt-10 w-full'>
 		<Section title='Proyectos' />
-		{
-			PROJECTS.map(({ image, title, description, tags, link }) => (
-				<div class='my-10 flex flex-col justify-center sm:flex-row sm:gap-x-10 sm:gap-y-0'>
-					<div class='flex flex-col'>
-						<div class='bg-dark relative mx-auto flex max-w-xs flex-col space-y-3 rounded-xl border border-white p-3 shadow-lg md:max-w-3xl md:flex-row md:space-x-5 md:space-y-0'>
-							<div class='bg-dark grid w-full place-items-center md:w-1/3'>
-								<img
-									src={image}
-									alt=''
-									class='transform rounded-md transition-transform duration-300 hover:scale-110'
-								/>
-							</div>
-							<div class='bg-dark flex w-full flex-col space-y-2 p-3 md:w-2/3'>
-								<h3 class='dark:white-300 text-dark-300 text-xl font-black md:text-3xl'>{title}</h3>
-								<p class='dark:white-300 text-dark-300 md:text-md pb-3 text-base'>{description}</p>
-								<ul class='flex flex-row gap-x-2'>
-									{tags.map((tag) => (
-										<li>
-											<span class={`flex gap-x-2 rounded-full text-xs ${tag.class} px-2 py-1 `}>
-												<tag.icon class='size-4' />
-												{tag.name}
-											</span>
-										</li>
-									))}
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			))
-		}
+		<Proyects />
 	</div>
 	<div id='about' class='mb-10 w-full'>
 		<Section title='Stack de tecnologias' />
