--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import MailIcon from '@/components/icons/Mail.astro'
 <div class='max-w-xxl mb-20'>
 	<div class='mb-4 flex gap-4'>
 		<!-- <Image  alt={'Tobias Sanmartin'} src={perfil} /> -->
-		<img class='size-20 rounded-full shadow-lg' src='/public/images/toto.webp' alt='' />
+		<img class='size-20 rounded-full shadow-lg' src='/images/toto.webp' alt='' />
 		<a
 			href='https://www.linkedin.com/in/tob%C3%ADas-sanmart%C3%ADn-001b74254/'
 			target='_blank'
