links de proyectos

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -42,7 +42,7 @@ import MailIcon from '@/components/icons/Mail.astro'
 		class='mt-6 text-xl text-gray-800 dark:text-gray-300 [&>strong]:font-semibold [&>strong]:text-teal-400 dark:[&>strong]:text-teal-400'
 	>
 		+5 años de experiencia. <strong>Frontend Delevoper</strong> de La Costa, Argentina. <br /> Especializado
-		en el desarrollo frontend de aplicaciones web.
+		en el desarrollo Frontend de aplicaciones web.
 	</p>
 	<nav class='mt-8 flex flex-wrap gap-4'>
 		<SocialPill href='mailto:tobiassanmartin.work@gmail.com'>
