--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -60,7 +60,7 @@ const PROJECTS = [
 		title: 'Uni Renta - Alquileres para estudiantes',
 		description:
 			'Uni renta es una pagina dedicada a aquellos estudiantes que estan buscando alquiler para sus estudios.',
-		link: '',
+		// link: 'https://uni-renta.vercel.app/#/',
 		image: '/images/unirenta.png',
 		tags: [TAGS.VUE, TAGS.BOOTSTRAP]
 	}
@@ -73,11 +73,13 @@ const PROJECTS = [
 			<div class='flex flex-col'>
 				<div class='bg-dark relative mx-auto flex max-w-xs flex-col space-y-3 rounded-xl border border-white p-3 shadow-lg md:max-w-3xl md:flex-row md:space-x-5 md:space-y-0'>
 					<div class='bg-dark grid w-full place-items-center md:w-1/3'>
-						<img
-							class='transform rounded-md transition-transform duration-300 hover:scale-110 sm:ml-0 md:ml-5'
-							alt={'Tobias Sanmartin'}
-							src={image}
-						/>
+						<a href={link}>
+							<img
+								class='transform rounded-md transition-transform duration-300 hover:scale-110 sm:ml-0 md:ml-3'
+								alt={'Tobias Sanmartin'}
+								src={image}
+							/>
+						</a>
 					</div>
 					<div class='bg-dark flex w-full flex-col space-y-2 p-3 md:w-2/3'>
 						<h3 class='dark:white-300 text-dark-300 text-xl font-black md:text-3xl'>{title}</h3>
