--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -60,7 +60,7 @@ const PROJECTS = [
 		title: 'Uni Renta - Alquileres para estudiantes',
 		description:
 			'Uni renta es una pagina dedicada a aquellos estudiantes que estan buscando alquiler para sus estudios.',
-		// link: 'https://uni-renta.vercel.app/#/',
+		link: 'https://uni-renta.vercel.app/#/',
 		image: '/images/unirenta.png',
 		tags: [TAGS.VUE, TAGS.BOOTSTRAP]
 	}
