--- a/src/pages/en/404.astro
+++ b/src/pages/en/404.astro
@@ -1,14 +1,14 @@
 ---
-import { changeLanguage } from 'i18next'
-import PageLayout from '@/layouts/BaseLayout.astro'
-import Button from '@/components/Button.astro'
+import { changeLanguage } from "i18next";
+import PageLayout from "@/layouts/BaseLayout.astro";
+import Button from "@/components/Button.astro";
 
-changeLanguage('es')
+changeLanguage("en");
 
 const meta = {
-	description: 'Not found',
-	title: '404'
-}
+    description: "Not found",
+    title: "404"
+};
 ---
 
 <PageLayout meta={meta}>
@@ -35,6 +35,7 @@ const meta = {
 				width='14'
 				height='14'
 				viewBox='0 0 24 24'
+				slot='icon-after'
 				class='-scale-x-100'
 			>
 				<path
