--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,5 +1,5 @@
 ---
-
+// import i18next, { t, changeLanguage } from 'i18next'
 ---
 
 <header class='mb-12 flex w-full flex-wrap pb-3 text-sm sm:flex-nowrap sm:justify-start'>
@@ -16,6 +16,14 @@
 				aria-label='Nav Menu Item'
 				>Sobre mi
 			</a>
+			<!-- <select
+				id='languageSelect'
+				class='text-md block w-full rounded-lg border-gray-200 px-5 py-3 pe-10 focus:border-blue-500 focus:ring-blue-500 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-700 dark:bg-neutral-900 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600'
+			>
+				<option selected=''>Lenguaje</option>
+				<option>Español</option>
+				<option>English</option>
+			</select> -->
 			<!-- <a
 				href='/tools'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
@@ -56,6 +64,7 @@
 </header>
 
 <script>
+	import { changeLanguage } from 'i18next'
 	function getCurrentTheme() {
 		return localStorage.getItem('theme')
 	}
