--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,7 @@ import BaseHead from '@/components/BaseHead.astro'
 import Footer from '@/components/layout/Footer.astro'
 import Header from '@/components/layout/Header.astro'
 import ThemeProvider from '@/components/ThemeProvider.astro'
+import i18next, { t } from 'i18next'
 
 import { siteConfig } from '@/site-config'
 
@@ -17,7 +18,7 @@ const {
 } = Astro.props
 ---
 
-<html lang={siteConfig.lang} class='scroll-smooth'>
+<html lang={i18next.language} class='scroll-smooth'>
 	<head>
 		<BaseHead articleDate={articleDate} description={description} ogImage={ogImage} title={title} />
 	</head>
@@ -28,7 +29,9 @@ const {
 			class='flex min-h-screen w-screen max-w-[60rem] flex-col items-center px-6 pb-10 pt-7 font-satoshi text-[0.92rem] leading-relaxed sm:px-10 lg:px-10'
 		>
 			<Header />
+
 			<slot />
+
 			<Footer />
 		</main>
 	</body>
