--- a/src/pages/en/blog/[...page].astro
+++ b/src/pages/en/blog/[...page].astro
@@ -9,7 +9,7 @@ import PostPreview from "@/components/blog/PostPreview.astro";
 import PageLayout from "@/layouts/BaseLayout.astro";
 import { getAllPosts, getUniqueTags, sortMDByDate } from "@/utils";
 
-changeLanguage("es");
+changeLanguage("en");
 
 export const getStaticPaths = (async ({ paginate }) => {
     const allPosts = await getAllPosts();
