--- a/src/pages/en/tags/index.astro
+++ b/src/pages/en/tags/index.astro
@@ -4,7 +4,7 @@ import Button from "@/components/Button.astro";
 import PageLayout from "@/layouts/BaseLayout.astro";
 import { getAllPosts, getUniqueTagsWithCount } from "@/utils";
 
-changeLanguage("es");
+changeLanguage("en");
 
 const allPosts = await getAllPosts();
 const allTags = getUniqueTagsWithCount(allPosts);
