--- a/src/pages/en/tools/index.astro
+++ b/src/pages/en/tools/index.astro
@@ -4,7 +4,7 @@ import PageLayout from "@/layouts/BaseLayout.astro";
 import ToolSection from "@/components/ToolSection.astro";
 import Button from "@/components/Button.astro";
 
-changeLanguage("es");
+changeLanguage("en");
 
 const DESIGN = [
     {
