--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,44 +1,30 @@
 ---
 import PageLayout from '../layouts/BaseLayout.astro'
 import Section from '../components/Section.astro'
-import Card from '../components/Card.astro'
-import ProjectCard from '../components/ProjectCard.astro'
-import Label from '../components/Label.astro'
-import SkillLayout from '../components/SkillLayout.astro'
-import PostPreview from '@/components/blog/PostPreview.astro'
-import Badge from '@/components/Badge.astro'
 import ExperienceItem from '@/components/ExperienceItem.astro'
 import TecnologyStack from '@/components/TecnologyStack.astro'
 import AboutMe from '@/components/AboutMe.astro'
 import Proyects from '@/components/Proyects.astro'
-import { Image } from 'astro:assets'
-import perfil from '../assets/toto.webp'
 import { getAllPosts, sortMDByDate } from '@/utils'
 import Hero from '@/components/Hero.astro'
-
-const languages = ['lorem', 'ipsum']
-const frontend = ['lorem', 'ipsum', 'lorem', 'ipsum', 'lorem', 'ipsum', 'lorem']
-const backend = ['lorem', 'ipsum', 'lorem', 'ipsum']
-const others = ['lorem', 'ipsum', 'lorem', 'ipsum', 'lorem']
+import i18next, { t, changeLanguage } from 'i18next'
 
 const MAX_POSTS = 10
 const allPosts = await getAllPosts()
-const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
-
 const EXPERIENCIE = [
 	{
 		date: 'Marzo 2022 hasta la actualidad',
 		title: 'Frontend Developer',
 		company: 'WaveIt',
 		description:
-			'Actualmente, soy Desarrollador Front End en WAVE IT, donde superviso el diseño e implementación de sitios web, creo documentación técnica, mantengo y actualizo proyectos. También optimizo diseños para mejorar la experiencia del usuario, mejoro continuamente los procesos y el rendimiento del código. Además, proporciono apoyo y mentoría a desarrolladores junior.'
+			'Actualmente, soy Desarrollador Front End en WAVE IT, donde superviso el dise\u00F1o e implementaci\u00F3n de sitios web, creo documentaci\u00F3n t\u00E9cnica, mantengo y actualizo proyectos. Tambi\u00E9n optimizo dise\u00F1os para mejorar la experiencia del usuario, mejoro continuamente los procesos y el rendimiento del c\u00F3digo. Adem\u00E1s, proporciono apoyo y mentor\u00EDa a desarrolladores junior.'
 	},
 	{
 		date: 'Marzo 2019',
 		title: 'Web Developer',
 		company: 'Freelance',
 		description:
-			'En esta etapa estuve trabajando de manera freelance, creando e implementando paginas web completas para clientes locales. La variedad de paginas iban desde landing pages hasta sistemas de gestion pequeña. Mejorando en algunos casos hasta 30% de gestion comercial, y hasta un 80% de alcanze.'
+			'En esta etapa estuve trabajando de manera freelance, creando e implementando paginas web completas para clientes locales. La variedad de paginas iban desde landing pages hasta sistemas de gestion peque\u00F1a. Mejorando en algunos casos hasta 30% de gestion comercial, y hasta un 80% de alcanze.'
 	}
 ]
 ---
